--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
+    <string name="sign_up"><u>Sign up</u></string>
+    <string name="log_in"><u>Log in</u></string>
     <string name="app_name">I21-1385</string>
 </resources>
